Wrapping up remaining styling bugfixes.

--- a/sites/all/themes/popup/css/style.css
+++ b/sites/all/themes/popup/css/style.css
@@ -238,6 +238,14 @@ footer{
 	padding: 2em 1em;
 }
 
+footer .wrapper { 
+max-width: 740px;}
+
+footer li{
+	height: 44px;
+	width: 150px;
+}
+
 .region-footer .block{
 	display: inline-block;
 }
